Throughput probing sets initial concurrency level even when feature flag is not enabled

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2023-04-03
    • 105
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The throughput probing algorithm sets the starting concurrency level regardless of whether the feature flag is enabled, but the algorithm only runs when the feature flag is enabled. So when the feature flag isn't enabled we end up just leaving it to the (lower) starting value.

            Assignee:
            Gregory Noma
            Reporter:
            Gregory Noma
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: