SERVER-75038 Create `TicketHolderMonitor` only if feature is enabled